K1J-1630: Fix tests in PrintCertificateQuestionConverterTest